<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KikumaApp</string>
    <string name="title_home">Home</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="sign_in">Sign In Picture</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Welcome to Kikuma Mobile Apps. Please fill in
        the field below to sign in.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="account">Do not have an account? Go to </string>
    <string name="signup">Sign Up</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="account_1">Already have an account? Go to</string>
    <string name="title">Title of Information</string>
    <string name="post">Posted %s</string>
    <string name="decsription">Description</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacus pretium sem magna. Adipiscing tincidunt nunc, et quis tempor, pretium ridiculus facilisi nisl. Non congue nulla phasellus adipiscing. Mi lacus sit fermentum, velit. Ut nibh in auctor tellus. Eu risus id ullamcorper urna auctor. Enim ut dignissim et ante turpis erat urna ornare. Aenean et elit aliquam ac massa. Feugiat eget semper nulla id nec vitae. Dignissim euismod elementum senectus hendrerit sagittis ultricies magna nulla. Luctus gravida id elementum pharetra ornare. Tellus leo morbi at imperdiet morbi congue sapien morbi. In augue platea adipiscing interdum vel, nisl turpis ornare sit. Et at nulla dui elit. Neque quam amet, vel amet tristique metus pretium non nulla. Odio neque, lacus ac enim augue aliquam vulputate purus. Varius sollicitudin imperdiet ac porttitor magna sapien egestas malesuada aenean. Proin egestas a pellentesque vitae. Cursus enim sit viverra quisque morbi. Sit eget in in id vulputate lorem mauris ac. Leo, diam ultrices vestibulum in id egestas dapibus purus. Diam donec euismod ac iaculis quam velit adipiscing. Viverra quis tempor, ut egestas. Sed eu, consectetur nec, convallis. Lacus, risus, maecenas felis aliquam iaculis a. Mus et integer donec morbi a adipiscing. Dis odio aliquam cursus faucibus integer tempus ac in. Ultrices lectus enim sit hac. Eu ornare sit aenean in hac nunc.</string>
    <string name="result">Result</string>
    <string name="date_result">Saturday, 8 May 2021</string>
    <string name="disease_name">Jerawat</string>
    <string name="image">Image</string>
    <string name="tips">Handling Tips</string>
    <string name="lorem2">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="btn_rs">Nearest Hospital</string>
    <string name="rs">Clinic Recommendation</string>
    <string name="hospital">Hospital</string>
    <string name="hello">Hey %s</string>
    <string name="welcome_message1">Welcome to Kikuma!</string>
    <string name="view">View More</string>
    <string name="profile">My Profile</string>
    <string name="history">History</string>
    <string name="detail_article">Detail Article</string>
    <string name="icon_tips">tips icon</string>
    <string name="rating">4.8</string>
    <string name="confirm_image">Confirm Image</string>
    <string name="next">Next</string>
    <string name="list_result">Possible Result</string>
    <string name="percentage">85%</string>
    <string name="detail">Detail Result</string>
    <string name="icon_star">Rating</string>
    <string name="range">Rp 100000 - Rp 300000</string>
    <string name="intro">Intro</string>
    <string name="loading">Preparing something great for you</string>
    <string name="sign_out">Sign Out</string>
    <string name="ok">OK</string>
    <string name="sign_out_confirmation">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="see_the_magic">See the magic</string>
    <string name="notes">Give it some notes</string>
</resources>