<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@color/green_200"
            android:layout_marginVertical="16dp"
            android:contentDescription="@string/image"/>


        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_date_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/post"
            android:textColor="@color/black"
            android:maxLines="2"/>

        <TextView
            android:id="@+id/tv_disease_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/disease_name"
            android:textColor="@color/black"
            android:textSize="24sp"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/decsription"
        android:textColor="@color/black_1"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/lorem"
        android:textSize="14sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/tips"
        android:textColor="@color/black_1"
        android:textSize="15sp" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/items_tips_list" />

    <Button
        android:id="@+id/btn_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/btn_rs"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_margin="16dp"/>

    </LinearLayout>
</ScrollView>
