<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/result"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:maxLines="2"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_date_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/date_result"
        android:layout_marginTop="3dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:maxLines="2"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="370dp"
        android:layout_height="142dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:src="@color/green_200"
        app:layout_constraintEnd_toEndOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@id/tv_date_result"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/tv_disease_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/disease_name"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/decsription"
        android:textColor="@color/black_1"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/tv_disease_name" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:text="@string/lorem"
        app:layout_constraintEnd_toEndOf="@id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/tips"
        android:textColor="@color/black_1"
        android:textSize="15sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@id/tv_description"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tips"
        tools:listitem="@layout/items_tips_list" />

    <Button
        android:id="@+id/btn_rs"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/btn_rs"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_result"
        app:layout_constraintStart_toStartOf="@+id/tv_result"
        app:layout_constraintTop_toBottomOf="@+id/rv_tips" />

</androidx.constraintlayout.widget.ConstraintLayout>