<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:paddingVertical="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.signin.SignInFragment">

        <ImageView
            android:id="@+id/image_signin"
            android:layout_width="192dp"
            android:layout_height="179dp"
            android:src="@drawable/sign_in"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/sign_in" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/welcome"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.124"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_signin" />

        <TextView
            android:id="@+id/welcome_message"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:textSize="13sp"
            android:layout_marginTop="7dp"
            android:text="@string/welcome_message"
            app:layout_constraintStart_toStartOf="@+id/welcome"
            app:layout_constraintTop_toBottomOf="@+id/welcome" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/black_1"
            app:layout_constraintStart_toStartOf="@+id/welcome_message"
            app:layout_constraintTop_toBottomOf="@+id/welcome_message" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="330dp"
            android:layout_height="46dp"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_email"
            android:drawablePadding="2dip"
            android:paddingStart="30dip"
            android:paddingEnd="10dip"
            android:layout_marginTop="5dp"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email"
            android:textColor="@color/black"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="@color/black_1"
            android:layout_marginTop="14dp"
            app:layout_constraintStart_toStartOf="@+id/welcome_message"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="330dp"
            android:layout_height="46dp"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            android:background="@drawable/edit_text_background"
            android:drawableEnd="@drawable/ic_view"
            android:drawablePadding="2dip"
            android:paddingStart="30dip"
            android:paddingEnd="10dip"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:autofillHints="@string/password" />

        <TextView
            android:id="@+id/tv_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/forgot"
            android:textSize="12sp"
            android:textColor="@color/green_200"
            app:layout_constraintEnd_toEndOf="@+id/ed_password"
            app:layout_constraintTop_toBottomOf="@+id/ed_password"
            android:layout_marginTop="8dp"/>

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginTop="23dp"
            android:textAllCaps="false"
            android:fontFamily="@font/poppins_semi_bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            app:layout_constraintEnd_toEndOf="@+id/ed_password"
            app:layout_constraintStart_toStartOf="@+id/ed_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_pass" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/account"
            android:textSize="13sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.423"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

        <TextView
            android:id="@+id/sign_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:layout_marginStart="5dp"
            android:textSize="13sp"
            android:fontFamily="@font/lato_semi_bold"
            android:textColor="@color/green_200"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
