<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/form_container"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="ui.signup.SignUpFragment">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:layout_marginStart="38dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/name"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:autofillHints="@string/name"
            android:background="@drawable/edit_text_background"
            android:inputType="textPersonName"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/ed_name" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:autofillHints="@string/email"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/password"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/ed_email" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:autofillHints="@string/age"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_password"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/dob"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <EditText
            android:id="@+id/ed_dob"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:autofillHints="@string/age"
            android:background="@drawable/edit_text_background"
            android:inputType="date"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_dob"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/address"
            android:textColor="@color/black_1"
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="@+id/tv_signup"
            app:layout_constraintTop_toBottomOf="@+id/ed_dob" />

        <EditText
            android:id="@+id/ed_address"
            android:layout_width="330dp"
            android:layout_height="46dp"
            android:autofillHints="@string/address"
            android:background="@drawable/edit_text_background"
            android:inputType="textLongMessage"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_address"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/signup"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/ed_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/account_1"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_signup"
            app:layout_constraintHorizontal_bias="0.381"
            app:layout_constraintStart_toStartOf="@+id/btn_signup"
            app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_marginStart="5dp"
            android:textSize="13sp"
            android:fontFamily="@font/lato_semi_bold"
            android:textColor="@color/green_200"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>